policies/kyverno/verify-image-signatures-ecr-gcr.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures-ecr-gcr
  annotations:
    policies.kyverno.io/title: Verify Image Signatures (ECR, GCR)
    policies.kyverno.io/description: >-
      Require Cosign signatures for images from ECR and GCR. Starts in Audit.
spec:
  validationFailureAction: Enforce
  background: true
  exclude:
    any:
      - resources:
          namespaces:
            - kube-system
            - kube-public
            - kube-node-lease
            - cert-manager
            - external-dns
            - spinnaker
            - argocd
            - kyverno
  rules:
    - name: verify-cosign-ecr
      match:
        any:
          - resources:
              kinds: [Pod]
      verifyImages:
        - imageReferences:
            - "*.dkr.ecr.*.amazonaws.com/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |
                      # TODO: insert your ECR signing public key(s)
                      -----BEGIN PUBLIC KEY-----
                      ECR_PLACEHOLDER_KEY
                      -----END PUBLIC KEY-----
    - name: verify-cosign-gcr
      match:
        any:
          - resources:
              kinds: [Pod]
      verifyImages:
        - imageReferences:
            - "gcr.io/*"
            - "us.gcr.io/*"
            - "eu.gcr.io/*"
            - "asia.gcr.io/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |
                      # TODO: insert your GCR signing public key(s)
                      -----BEGIN PUBLIC KEY-----
                      GCR_PLACEHOLDER_KEY
                      -----END PUBLIC KEY-----
